<resources>
    <string name="app_name">Todo App</string>
    <string name="registration">Registration</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register_btn_text">Register</string>
    <string name="register_account_login_here">Already have an account?</string>
    <string name="login">Login</string>
    <string name="login_btn_text">Login</string>
    <string name="login_account_register_here">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="welcome_you_re_logged_in">Welcome! You\'re Logged In</string>
    <string name="profile">Profile</string>
    <string name="new_task">New Task</string>
    <string name="txt_title">Title</string>
    <string name="txt_date">2-Feb-2020</string>
    <string name="txt_description">Description</string>
    <string name="txt_add">Add</string>
    <string name="txt_cencel">Cencel</string>
    <string name="txt_time">08:00</string>
</resources>
