<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Feature.Task.AddTaskActivity">

    <EditText
        android:id="@+id/title_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/txt_title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/description_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/txt_description"
            android:inputType="textMultiLine"
            android:lines="6"
            app:layout_constraintEnd_toEndOf="@+id/title_editText"
            app:layout_constraintStart_toStartOf="@+id/title_editText"
            app:layout_constraintTop_toBottomOf="@+id/title_editText" />

        <EditText
            android:id="@+id/et_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/txt_date"
            app:layout_constraintStart_toStartOf="@+id/description_editText"
            app:layout_constraintTop_toBottomOf="@+id/description_editText" />

    <ImageButton
        android:id="@+id/btn_get_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_date_range_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_date"
        app:layout_constraintStart_toEndOf="@+id/et_date"
        app:layout_constraintTop_toTopOf="@+id/et_date" />


    <Button
        android:id="@+id/add_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/txt_add"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@id/cancel_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_get_datetime" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/txt_cencel"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/add_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/add_btn"
        app:layout_constraintTop_toTopOf="@+id/add_btn" />

    <LinearLayout
        android:id="@+id/progress_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTransWhite"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/login_activity_progressbar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>